# tea_dsp

./: .bazelrc  .gitattributes  .gitignore  README.md  Readme.md  WORKSPACE  crates.bzl  requirements.txt
TestTones/: test.csv
analysis/: freq_response.py  getdata.m  requirements.txt
cc/: BUILD
cc/Envelope/: TTEnvGen.h
cc/FIR/: TeaFIR.h
cc/common_conversions/: conversions.h
cc/tests/: BUILD
cc/tests/common/: TeaCommon_unittest.cpp
cc/tests/common_conversions/: TeaCommon_unittest.cpp
cc/tests/lfo/: TeaLFO_unittest.cpp
cc/tests/src/: DSPAsserts.cpp
common/: BUILD  conversions.cpp
engine/: BUILD.bazel  error.rs  io.rs  lib.rs  sine_generator.rs
engine/cmd/: BUILD.bazel  simple_sine_engine.rs  test_engine.rs
fir/: TeaFIR.cpp
flatbuffers/: BUILD.bazel  defs.bzl  deps.bzl  run_flatc.sh
frontend/plugins/TeaFilter/: README.md  TeaFilter.RPP  TeaFilter.cpp  TeaFilter.sln
frontend/plugins/TeaFilter/config/: TeaFilter-ios.xcconfig  TeaFilter-mac.xcconfig  TeaFilter-web.mk  TeaFilter-win.props
frontend/plugins/TeaFilter/installer/: TeaFilter.iss  TeaFilter.pkgproj  readme-osx.rtf  readme-win.rtf
frontend/plugins/TeaFilter/projects/: TeaFilter-aax.vcxproj  TeaFilter-aax.vcxproj.filters  TeaFilter-app.vcxproj  TeaFilter-app.vcxproj.filters  TeaFilter-vst2.vcxproj.filters  TeaFilter-vst3.vcxproj.filters  TeaFilter-wam-controller.mk  TeaFilter-wam-processor.mk
frontend/plugins/TeaFilter/projects/TeaFilter-iOS.xcodeproj/: project.pbxproj
frontend/plugins/TeaFilter/projects/TeaFilter-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
frontend/plugins/TeaFilter/projects/TeaFilter-macOS.xcodeproj/: project.pbxproj
frontend/plugins/TeaFilter/projects/TeaFilter-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  VST3 Controller Library.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-VST2.xcscheme  macOS-VST3 (Distributed).xcscheme  macOS-VST3.xcscheme
frontend/plugins/TeaFilter/resources/: TeaFilter-AAX-Info.plist  TeaFilter-AU-Info.plist  TeaFilter-Pages.xml  TeaFilter-VST2-Info.plist  TeaFilter-iOS-AUv3-Info.plist  TeaFilter-iOS-LaunchScreen.storyboard  TeaFilter-macOS-AUv3-Info.plist  TeaFilter-macOS-AUv3Framework-Info.plist  TeaFilter-macOS-Info.plist  TeaFilter-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
frontend/plugins/TeaFilter/scripts/: make_zip.py  makedist-win.bat  prepare_resources-mac.py  update_version.py
frontend/plugins/TeaPanner/: TeaPanner.jucer
frontend/plugins/TeaPanner/Builds/VisualStudio2019/: TeaPanner.sln  TeaPanner_SharedCode.vcxproj  TeaPanner_SharedCode.vcxproj.filters  TeaPanner_StandalonePlugin.vcxproj
frontend/plugins/TeaPanner/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
frontend/plugins/TeaPanner/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
io/: BUILD.bazel  chunk.fbs  lib.rs
io/cmd/: BUILD.bazel  latency_test.rs  latency_test.sh  tcp_latency_test.rs
plugins/vst3_example_plugin_hello_world/: BUILD.bazel
rust/: Cargo.toml  defs.bzl  tea_dsp.h
rust/src/: gain.rs  lib.rs
simple_sine/: BUILD.bazel  simple_sine.rs
src/: TTTest.cpp
src/Common(Stolen)/StolenCommon/Includes/: SynthDefs.h  SynthFile.h  SynthString.h  WaveFile.h
src/Common(Stolen)/StolenCommon/StolenCommon/: StolenCommon.cpp  StolenCommon.vcxproj  StolenCommon.vcxproj.filters
src/Common(Stolen)/StolenCommon/StolenCommon/Debug/: StolenCommon.idb
src/Common(Stolen)/StolenCommon/src/: Global.cpp  StolenCommon.cpp  SynthDefs.cpp  SynthFile.cpp  SynthString.cpp  WaveFile.cpp
src/TeaCommon/: conversions.cpp  conversions.h
src/TeaDSP/: WORKSPACE
src/TeaDSP/TeaCommon/: AudioBuffer.cpp  AudioBuffer.h  BUILD  conversions.cpp
src/TeaDSP/TeaFIR/: BUILD  TeaFIR.cpp  TeaFIR.h
src/TeaDSP/Test/: BUILD  TeaFIR_unittest.cpp  TeaGenerator.cpp  TeaGenerator.h  TeaGenerator_unittest.cpp  TeaGenerator_unitttest.cpp
src/TeaDSP/Test/TeaTest/: DSPAsserts.cpp
src/TeaDSP/analysis/: README.md  plotchans.m  plotfreq.m
src/TeaDSP/consoleTests/DspTests/: DspTests.cpp  DspTests.sln  DspTests.vcxproj.filters
src/TeaDSP/consoleTests/TestBaz/: BUILD  dsptest.cpp
src/TeaFIR/: TeaFIR.cpp  TeaFIR.h
src/TeaFilter/: TeaFilter.h  TeaFilter.jucer  config.h
src/TeaFilter/Builds/VisualStudio2019/: TeaFilter.sln  TeaFilter_SharedCode.vcxproj  TeaFilter_SharedCode.vcxproj.filters  TeaFilter_StandalonePlugin.vcxproj  TeaFilter_VST3.vcxproj  resources.rc
src/TeaFilter/JuceLibraryCode/: AppConfig.h  JuceHeader.h
src/TeaFilter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/TeaFilter/TeaFilter.xcworkspace/: contents.xcworkspacedata
src/TeaFilter/installer/: license.rtf
src/TeaFilter/projects/: TeaFilter-vst2.vcxproj  TeaFilter-vst3.vcxproj
src/TeaFilter/projects/TeaFilter-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme
src/TeaFilter/projects/TeaFilter-macOS.xcodeproj/xcshareddata/xcschemes/: macOS-AAX.xcscheme  macOS-AUv2.xcscheme
src/TeaFilter/resources/: IPlugAUViewController.xib  TeaFilter-VST3-Info.plist  TeaFilter-iOS-Info.plist
src/TeaFilter/scripts/: makedist-mac.sh  makedist-web.sh  update_installer_version.py
src/TeaPanner/Builds/VisualStudio2019/: TeaPanner_VST3.vcxproj  resources.rc
src/consoleTests/DspTests/: DspTests.vcxproj
tea_dsp/: .gitignore  README.md
tea_dsp/TeaCommon/: conversions.h
tea_dsp/TeaFIR/: TeaFIR.h
tea_dsp/TeaLFO/: BUILD  TeaLFO.cpp  TeaLFO.h
tea_dsp/TeaTimeEnvGen/: TTEnvGen.cpp
tea_dsp/Test/: BUILD  TeaCommon_unittest.cpp  TeaFIR_unittest.cpp
tea_dsp/Test/TeaTest/: BUILD  DSPAsserts.h  TeaGenerator.cpp  TeaGenerator.h
tea_dsp/tea_gain/: Cargo.toml
tea_dsp/tea_gain/src/: lib.rs  main.rs
vs/: TeaTimeSSL.sln
vs/Debug/: StolenCommon.lib  TeaTimeSSL.ilk
vs/TeaTimeSSL/: TeaTimeSSL.vcxproj  TeaTimeSSL.vcxproj.filters
vs/TeaTimeSSL/Debug/: vc142.idb
vst3/: BUILD.bazel  defs.bzl  vst3.BUILD.bazel
