load("//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "engine",
    deps = [
        "//io:chunk",
        "@crates_io//:anyhow",
        "@crates_io//:ctrlc",
        "@crates_io//:flatbuffers",
        "@crates_io//:log",
        "@crates_io//:num",
        "@crates_io//:thiserror",
    ],
)
