load("//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "simple_sine",
    data = [
        "//engine/cmd:simple_sine_engine",
    ],
    env = {
        "ENGINE": "$(rootpath //engine/cmd:simple_sine_engine)",
    },
    deps = [
        "@crates_io//:eframe",
        "@crates_io//:egui",
        "@crates_io//:flume",
        "@crates_io//:tracing-subscriber",
    ],
)
