load("//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_flatbuffer_gen(
    name = "chunk_generated",
    schema = ":chunk.fbs",
)

rust_binary(
    name = "io",
    deps = [
        "//engine",
        "//io",
        "//io:chunk",
        "@crates_io//:anyhow",
        "@crates_io//:flatbuffers",
    ],
)
